@@ -1,3 +1,8 @@
+2008-07-24  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/adminwindow.py:
+	Add back kill component in context menu, fixes #1064
+
 2008-07-23  Arek Korbik  <arkadini@gmail.com>
 
 	* flumotion/admin/gtk/componentlist.py (ComponentList.stateSet):
